--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Ikatan Pelajar Muhammadiyah - SMP Negeri 1</title>
+    <title>Ikatan Pelajar Muhammadiyah - SMAM 8 SUKODADI</title>
 
     <!-- Google font -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
@@ -238,9 +238,9 @@
         </div>
 
         <div class="title" aria-hidden="false">
-            <h1>Ikatan Pelajar Muhammadiyah - SMP Negeri 1</h1>
+            <h1>Ikatan Pelajar Muhammadiyah - SMAM 8 SUKODADI</h1>
             <p>Periode 2025 / 2026 · Website Resmi Organisasi Sekolah</p>
-            <p class="address">Jalan Merdeka No. 10, Kecamatan Contoh, Kabupaten Contoh</p>
+            <p class="address">Merjoyo, Sukodadi, Kec. Sukodadi Kab. Lamongan</p>
         </div>
 
         <div class="brand-right">
@@ -257,17 +257,17 @@
                 <div>
                     <table class="core" aria-describedby="struktur-keterangan">
                         <tbody>
-                            <tr><th>Ketua Umum</th><td>Alfin Sabil</td></tr>
-                            <tr><th>Wakil Ketua</th><td>Dina Putri</td></tr>
-                            <tr><th>Bendahara Umum</th><td>Rizky Adi</td></tr>
-                            <tr><th>Wakil Bendahara 1</th><td>Fahri Hidayat</td></tr>
-                            <tr><th>Wakil Bendahara 2</th><td>Intan Maulida</td></tr>
-                            <tr><th>Sekretaris Umum</th><td>Siti Rahma</td></tr>
-                            <tr><th>Wakil Sekretaris Umum</th><td>Bagas Wibowo</td></tr>
+                            <tr><th>Ketua Umum</th><td>Alfin Sabil Khafifudin</td></tr>
+                            <tr><th>Wakil Ketua</th><td>Trian Ramadhani</td></tr>
+                            <tr><th>Bendahara Umum</th><td>Ayu Romadhoni</td></tr>
+                            <tr><th>Wakil Bendahara 1</th><td>Della Ayu Pramita Sari</td></tr>
+                            <tr><th>Wakil Bendahara 2</th><td>Rosidatul Aprlya Salma</td></tr>
+                            <tr><th>Sekretaris Umum</th><td>Hayfa Aretha Zizi</td></tr>
+                            <tr><th>Wakil Sekretaris Umum</th><td>Ayunda Nasihah</td></tr>
                         </tbody>
                     </table>
                     <p id="struktur-keterangan" style="margin:10px 0 0;color:var(--muted);font-size:13px;">
-                        Kontak organisasi: ipm.smp1@example.sch.id
+                        Kontak organisasi: ipm.smam8skd
                     </p>
                 </div>
 
@@ -287,20 +287,19 @@
                             <div class="role-row">
                                 <div class="role">
                                     <h4>Ketua Bidang</h4>
-                                    <p>Muhammad Rizal</p>
+                                    <p>Safitri</p>
                                 </div>
                                 <div class="role">
                                     <h4>Sekretaris Bidang</h4>
-                                    <p>Nur Aisyah</p>
+                                    <p>Silvana Fadilatur Rahma</p>
                                 </div>
                                 <div class="role">
                                     <h4>Anggota</h4>
                                     <ul class="anggota-list">
-                                        <li>1. Siti Nurhaliza</li>
-                                        <li>2. Dwi Setiawan</li>
-                                        <li>3. Rani Lestari</li>
-                                        <li>4. Agus Salim</li>
-                                        <li>5. Laila Putri</li>
+                                        <li>1. Meliani Hisna Dwi Labibah</li>
+                                        <li>2. M. Raditya Romadhani</li>
+                                        <li>3. Sultan Anda Zuwa Arohman</li>
+                                        <li>4. Debrian Vallent Pradika</li>
                                     </ul>
                                 </div>
                             </div>
@@ -312,19 +311,18 @@
                             <div class="role-row">
                                 <div class="role">
                                     <h4>Ketua Bidang</h4>
-                                    <p>Rizka Amelia</p>
+                                    <p>Lukman Al-Hakim</p>
                                 </div>
                                 <div class="role">
                                     <h4>Sekretaris Bidang</h4>
-                                    <p>Andi Saputra</p>
+                                    <p>Violin Tsunade</p>
                                 </div>
                                 <div class="role">
                                     <h4>Anggota</h4>
                                     <ul class="anggota-list">
-                                        <li>1. Putri Amelia</li>
-                                        <li>2. Wahyu Pratama</li>
-                                        <li>3. Indah Pratiwi</li>
-                                        <li>4. Farhan Maulana</li>
+                                        <li>1. Naufal Azzam Al latif</li>
+                                        <li>2. Mael Adelia Rahmadewi</li>
+                                        <li>3. Amirah Jannah Amalia</li>
                                     </ul>
                                 </div>
                             </div>
@@ -336,18 +334,19 @@
                             <div class="role-row">
                                 <div class="role">
                                     <h4>Ketua Bidang</h4>
-                                    <p>H. Yusuf Al-Farisi</p>
+                                    <p>H. Adam Dzikri F.</p>
                                 </div>
                                 <div class="role">
                                     <h4>Sekretaris Bidang</h4>
-                                    <p>Sarah Nabila</p>
+                                    <p>Siti Nur Halizah</p>
                                 </div>
                                 <div class="role">
                                     <h4>Anggota</h4>
                                     <ul class="anggota-list">
-                                        <li>1. Ahmad Zuhri</li>
-                                        <li>2. Mei Handayani</li>
-                                        <li>3. Dedi Santoso</li>
+                                        <li>1. Zainul Amir Almajid</li>
+                                        <li>2. Satria Adrian Pratama</li>
+                                        <li>3. Mahira Khaulah Raniyah</li>
+                                        <li>4. M. Rizki Dwi Permana</li>
                                     </ul>
                                 </div>
                             </div>
@@ -359,19 +358,18 @@
                             <div class="role-row">
                                 <div class="role">
                                     <h4>Ketua Bidang</h4>
-                                    <p>Nurul Huda</p>
+                                    <p>Fino Alfian</p>
                                 </div>
                                 <div class="role">
                                     <h4>Sekretaris Bidang</h4>
-                                    <p>Bagus Pratama</p>
+                                    <p>Nayla Tazkiyah N.R</p>
                                 </div>
                                 <div class="role">
                                     <h4>Anggota</h4>
                                     <ul class="anggota-list">
-                                        <li>1. Rafi Kurnia</li>
-                                        <li>2. Lilis Suryani</li>
-                                        <li>3. Riyan Saputra</li>
-                                        <li>4. Siska Marlina</li>
+                                        <li>1. Andika Wahyu P.P</li>
+                                        <li>2. M. Afifudin</li>
+                                        <li>3. Fricha Dwi Cahyani</li>
                                     </ul>
                                 </div>
                             </div>
@@ -385,13 +383,13 @@
         <!-- Info kontak / alamat singkat -->
         <section class="card" aria-labelledby="kontak-heading">
             <h2 id="kontak-heading" style="margin-top:0;color:#222;">Kontak & Alamat Sekolah</h2>
-            <p style="margin:6px 0 0;color:var(--muted);">SMP Negeri 1 Contoh — Jalan Merdeka No. 10, Kecamatan Contoh, Kabupaten Contoh, Provinsi Contoh.</p>
-            <p style="margin:6px 0 0;color:var(--muted);">Email: admin@smp1contoh.sch.id · Telp: (021) 123-4567</p>
+            <p style="margin:6px 0 0;color:var(--muted);">SMAM 8 Sukodadi - Merjoyo,Sukodadi Kec, Sukodadi Kab, Lamongan Prov, Jawa Timur</p>
+            <p style="margin:6px 0 0;color:var(--muted);">Email: adminIpmSmam8 · Telp: +62-851-3712-2268</p>
         </section>
     </main>
 
     <footer class="site" role="contentinfo">
-        © 2025 Ikatan Pelajar Muhammadiyah - SMP Negeri 1 · Semua hak cipta dilindungi
+        © 2025 Ikatan Pelajar Muhammadiyah - SMAM 8 SUKODADI · Semua hak cipta dilindungi
     </footer>
 
     <script>
