Update logos in index.html

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
     <header role="banner" aria-label="Header Organisasi">
         <div class="brand-left">
             <!-- Ganti file gambar sesuai milikmu -->
-            <img src="logo-sekolah.png" alt="Logo Sekolah" class="logo" />
+            <img src="Screenshot_20251011-140237-removebg-preview.png" alt="Logo Sekolah" class="logo" />
         </div>
 
         <div class="title" aria-hidden="false">
@@ -244,7 +244,7 @@
         </div>
 
         <div class="brand-right">
-            <img src="logo-ipm.png" alt="Logo Ikatan Pelajar Muhammadiyah" class="logo" />
+            <img src="images[1].jpeg" alt="Logo Ikatan Pelajar Muhammadiyah" class="logo" />
         </div>
     </header>
 
