--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
     <header role="banner" aria-label="Header Organisasi">
         <div class="brand-left">
             <!-- Ganti file gambar sesuai milikmu -->
-            <img src="Screenshot_20251011-140237-removebg-preview.png" alt="Logo Sekolah" class="logo" />
+            <img src="logosekolah[1].png" alt="Logo Sekolah" class="logo" />
         </div>
 
         <div class="title" aria-hidden="false">
